jss-compiler/tests/semantic_errors/direct_vector_assignment.jss
function void main() {
    let int[3] vetor = [1, 2, 3];
    vetor = [4, 5, 6];
}
